--- a/index.htm
+++ b/index.htm
@@ -62,11 +62,11 @@
 		</symbol>
 	</svg>
 
-	<nav id="header" class="navbar fixed-top py-4 px-2 p-md-4 border-bottom border-black nav-bar-custom">
+	<nav id="header" class="navbar fixed-top py-4 px-2 p-md-4 border-bottom border-black">
 		<div class="container-fluid">
 			<div class="navbar-brand">
 				<a href="index.html">
-					<img src="images/logo.png" alt="logo" class="site-logo">
+					<img src="images/main-logo.png" alt="logo">
 				</a>
 			</div>
 			<button class="navbar-toggler shadow-none border border-0 text-black" type="button"
@@ -111,7 +111,7 @@
 					</ul>
 
 					<div class="mt-5">
-						<img src="images/hero.png" alt="img" class="img-fluid">
+						<img src="images/menu-img.png" alt="img" class="img-fluid">
 					</div>
 				</div>
 			</div>
@@ -126,17 +126,17 @@
 				<div class="col-md-7">
 					<figure class="bannerimg position-relative">
 						<div class="text-content " data-aos="fade-up">
-							<h2 class="display-1 secondary-font">In Control of Your Life</h2>
+							<h2 class="display-1 secondary-font">Unleash Your Potential</h2>
 							<div class="billbord-section">
 								<h4 class="secondary-heading py-3">Embrace Your Journey</h4>
-								<p>Guiding young people through life with compassion, practical tools, and a safe space to grow.</p>
-								<p> Are you ready to choose yourself and live the life you truly want?</p>
-								
-								<a href="#" class="border-animation mt-2 action">Book a free clarity call</a>
+								<p>Are you a powerhouse woman with dreams as vast as the horizon? Ready to turn those
+									dreams
+									into reality? You're in the right place! </p>
+								<a href="#" class="border-animation mt-2">Read More</a>
 							</div>
 
 						</div>
-						<img src="images/hero.png" class="img-fluid" alt="image">
+						<img src="images/banner.jpg" class="img-fluid" alt="image">
 					</figure>
 				</div>
 			</div>
