Update why me section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Emily - Life Coach and Writer HTML Template</title>
+	<title>Aya Al-Hrout - Life Coach and Writer</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +61,7 @@
 				fill="currentColor" />
 		</symbol>
 	</svg>
-
+	<!-- header -->
 	<nav id="header" class="navbar fixed-top py-4 px-2 p-md-4 border-bottom border-black nav-bar-custom">
 		<div class="container-fluid">
 			<div class="navbar-brand">
@@ -118,6 +118,7 @@
 		</div>
 	</nav>
 
+	<!-- HERO -->
 	<div id="billboard">
 		<div class="container">
 			<div class="row">
@@ -129,9 +130,10 @@
 							<h2 class="display-1 secondary-font">In Control of Your Life</h2>
 							<div class="billbord-section">
 								<h4 class="secondary-heading py-3">Embrace Your Journey</h4>
-								<p>Guiding young people through life with compassion, practical tools, and a safe space to grow.</p>
+								<p>Guiding young people through life with compassion, practical tools, and a safe space
+									to grow.</p>
 								<p> Are you ready to choose yourself and live the life you truly want?</p>
-								
+
 								<a href="#" class="border-animation mt-2 action">Book a free clarity call</a>
 							</div>
 
@@ -143,20 +145,71 @@
 		</div>
 	</div>
 
+	<!-- Why Me -->
+
 	<section id="about" class="padding-medium">
 		<div class="container bg-secondary p-md-5 overflow-hidden">
 			<div class="row align-items-center p-5 g-md-5">
-				<div class="col-md-6" data-aos="fade-right">
-					<img src="images/about-banner.jpg" class="img-fluid" alt="image">
+				<div class="col-md-5" data-aos="fade-right">
+					<img src="images/why-me.png" class="img-fluid" alt="image">
 				</div>
-				<div class="col-md-6 mt-5 mt-md-0" data-aos="fade-left">
+
+				<div class="col-md-7 mt-5 mt-md-0" data-aos="fade-left">
 					<div class="text-content ps-md-5">
-						<h2 class="display-1 secondary-font">emilywatson.</h2>
-						<h4 class="secondary-heading py-3">Lifestyle Coach and Writer</h4>
-						<p>Hey there, I'm Emily, a passionate entrepreneur, life coach, and devoted wife. My
-							mission? Empower women like you to break through barriers, discover your authentic
-							selves, and build the life you've always envisioned.</p>
-						<a href="#" class="border-animation mt-2">Read More About Me</a>
+						<h2 class="display-1 secondary-font">Why Me.</h2>
+
+						<div class="d-flex gap-4 mt-3">
+							<div>
+								<img src="images/youth.png" alt="Youth-focused specialty" width="50" height="50">
+							</div>
+							<!-- First block -->
+							<div class="border-bottom border-primary flex-fill">
+								<div class="d-flex align-items-center">
+
+									<a href="#">
+										<h3 class="text-primary m-0">Youth-focused specialty:</h3>
+									</a>
+								</div>
+								<p>Deep understanding of 18–35 needs, language, and pace.</p>
+							</div>
+
+						</div>
+						<div class="d-flex gap-4 mt-3">
+							<div>
+								<img src="images/practical-over-theoretical.png" alt="Youth-focused specialty" width="50" height="50">
+							</div>
+							<!-- First block -->
+							<div class="border-bottom border-primary flex-fill">
+								<div class="d-flex align-items-center">
+
+									<a href="#">
+										<h3 class="text-primary m-0">Practical over theoretical:</h3>
+									</a>
+								</div>
+								<p>Handouts, exercises, and micro-actions every session.</p>
+							</div>
+
+						</div>
+
+						<div class="border-bottom border-primary mt-3">
+							<a href="#">
+								<h3 class="text-primary">Mindfulness + Coaching blend:</h2>
+							</a>
+							<p>Emotional regulation blended with goal execution.</p>
+						</div>
+						<div class="border-bottom border-primary mt-3">
+							<a href="#">
+								<h3 class="text-primary">Professional credibility:</h2>
+							</a>
+							<p>CIPD L7, MSc Strategic HR (Huddersfield), Certified Professional Life Coach, 5+ Years
+								Youth Empowerment Experience. </p>
+						</div>
+						<div class="border-bottom border-primary mt-3">
+							<a href="#">
+								<h3 class="text-primary">Warm, safe space:</h2>
+							</a>
+							<p>Empathetic, welcoming, inclusive and safe space for EVERYONE</p>
+						</div>
 					</div>
 
 				</div>
