Update accent colors and site name in CSS and HTML

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
             <!-- Uncomment the line below if you also wish to use an image logo -->
              <img src="assets/img/logo.png" alt="">
-<!--            <h1 class="sitename">EasyFolio</h1>-->
+<!--            <h1 class="sitename">Aya Heals Life</h1>-->
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -1041,7 +1041,7 @@
 
     <div class="container">
         <div class="copyright text-center ">
-            <p>© <span>Copyright</span> <strong class="px-1 sitename">EasyFolio</strong>
+            <p>© <span>Copyright</span> <strong class="px-1 sitename">Aya Heals Life</strong>
                 <span>All Rights Reserved</span></p>
         </div>
         <div class="social-links d-flex justify-content-center">
