feat: Add dedicated pages for about, services, testimonials, and poems, and update site navigation.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">Why Me?</a></li>
-          <li><a href="#outcomes">Outcomes</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#poems">Poems</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="poems.html">Poems</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -69,7 +69,7 @@
             <h2>In Control of Your Life</h2>
             <p class="lead">Guiding young people through life with compassion, practical tools, and a safe space to grow. Are you ready to choose yourself and live the life you truly want?</p>
             <div class="cta-buttons" data-aos="fade-up" data-aos-delay="300">
-              <a href="#contact" class="btn btn-primary">Book a Free Discovery Call</a>
+              <a href="contact.html" class="btn btn-primary">Book a Free Discovery Call</a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -111,22 +111,32 @@
                 <div class="row g-4">
                   <div class="col-12">
                     <div class="info-item">
+                      <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Youth-focused specialty</span>
+                      <p class="mt-2 text-muted">Deep understanding of 18–35 needs, language, and pace.</p>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="info-item">
                       <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Practical over Theoretical</span>
                       <p class="mt-2 text-muted">Handouts, exercises, and micro-actions every session.</p>
                     </div>
                   </div>
-                  
                   <div class="col-12">
                     <div class="info-item">
-                      <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Mindfulness + Coaching</span>
+                      <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Mindfulness + Coaching blend</span>
                       <p class="mt-2 text-muted">Emotional regulation blended with goal execution.</p>
                     </div>
                   </div>
-
                   <div class="col-12">
                     <div class="info-item">
-                      <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Experience</span>
-                      <p class="mt-2 text-muted">5+ Years Youth Empowerment Experience.</p>
+                      <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Professional credibility</span>
+                      <p class="mt-2 text-muted">CIPD L7, MSc Strategic HRM, Certified Professional Life Coach.</p>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="info-item">
+                      <span class="label"><i class="bi bi-check-circle-fill text-primary me-2"></i>Warm, safe space</span>
+                      <p class="mt-2 text-muted">Empathetic, welcoming, inclusive and safe space for EVERYONE.</p>
                     </div>
                   </div>
                 </div>
@@ -260,7 +270,7 @@
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h2 class="fw-bold mb-4 servies-title">Key Services Snapshot</h2>
             <p class="mb-4">Whether you need one-on-one guidance or the support of a group, I have a program designed for you.</p>
-            <a href="#contact" class="btn btn-outline-primary">Book a Call</a>
+            <a href="contact.html" class="btn btn-outline-primary">Book a Call</a>
           </div>
           <div class="col-lg-8">
             <div class="row g-4">
@@ -323,7 +333,7 @@
                   <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="River Poem" loading="lazy">
                   <div class="portfolio-overlay">
                     <div class="portfolio-actions">
-                      <a href="poem-river.html" class="details-link"><i class="bi bi-book"></i> Read Poem</a>
+                      <a href="poems.html" class="details-link"><i class="bi bi-book"></i> Read Poem</a>
                     </div>
                   </div>
                 </div>
@@ -341,7 +351,7 @@
                   <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="Friday Poem" loading="lazy">
                   <div class="portfolio-overlay">
                     <div class="portfolio-actions">
-                      <a href="poem-friday.html" class="details-link"><i class="bi bi-book"></i> Read Poem</a>
+                      <a href="poems.html" class="details-link"><i class="bi bi-book"></i> Read Poem</a>
                     </div>
                   </div>
                 </div>
@@ -364,6 +374,7 @@
                 <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
             </svg>
         </div>
+        <p><a href="testimonials.html">Read more testimonials →</a></p>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
