feat: Add new pages for services, testimonials, about, and poems, and update the homepage.

--- a/services/index.html
+++ b/services/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="assets/img/logo.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/'assets/img/logo.png" rel="icon">
+    <link href="/'assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -20,14 +20,14 @@
         rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="/'assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/'assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/'assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="/'assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/'assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/'assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -91,7 +91,7 @@
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/services/service-1.png" alt="One-on-One Coaching"
+                        <img src="/assets/img/services/service-1.png" alt="One-on-One Coaching"
                             class="img-fluid rounded-4 mb-4">
                         <div class="services-list">
                             <a href="#" class="active">One-on-One Youth Coaching</a>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/services/service-3.png" alt="Mindfulness Course"
+                        <img src="/assets/img/services/service-3.png" alt="Mindfulness Course"
                             class="img-fluid rounded-4 mb-4">
                         <div class="mt-4">
                             <a href="contact.html" class="btn btn-primary w-100">Join the Course</a>
@@ -201,7 +201,7 @@
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/services/service-2.png" alt="Group Coaching"
+                        <img src="/assets/img/services/service-2.png" alt="Group Coaching"
                             class="img-fluid rounded-4 mb-4">
                         <div class="mt-4">
                             <h4>Pricing</h4>
@@ -271,7 +271,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-4 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/services/service-4.png" alt="Workshops" class="img-fluid rounded-4 mb-4">
+                        <img src="/assets/img/services/service-4.png" alt="Workshops" class="img-fluid rounded-4 mb-4">
                         <div class="mt-4">
                             <a href="contact.html" class="btn btn-primary w-100">Request a Workshop</a>
                         </div>
@@ -301,16 +301,16 @@
         <i class="bi bi-arrow-up-short"></i>
     </a>
 
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/php-email-form/validate.js"></script>
+    <script src="/assets/vendor/aos/aos.js"></script>
+    <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
 </body>
 
