--- a/about/index.html
+++ b/about/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="assets/img/logo.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/assets/img/logo.png" rel="icon">
+    <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -20,14 +20,14 @@
         rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -82,7 +82,7 @@
             <div class="container" data-aos="fade-up">
                 <div class="row align-items-center">
                     <div class="col-lg-6" data-aos="fade-right">
-                        <img src="assets/img/profile/profile-square-2.webp" alt="Aya Profile"
+                        <img src="/assets/img/profile/profile-square-2.webp" alt="Aya Profile"
                             class="img-fluid rounded-4">
                     </div>
                     <div class="col-lg-6 content" data-aos="fade-left">
@@ -234,14 +234,17 @@
                         <ul class="list-unstyled">
                             <li class="mb-3"><i class="bi bi-check-circle text-primary me-2"></i>
                                 <strong>Empowerment:</strong> My mission is to help youth unlock their strengths, build
-                                confidence, and recognize their self-worth.</li>
+                                confidence, and recognize their self-worth.
+                            </li>
                             <li class="mb-3"><i class="bi bi-check-circle text-primary me-2"></i>
                                 <strong>Connection:</strong> I value genuine human connection and the power of sharing
-                                experiences in community.</li>
+                                experiences in community.
+                            </li>
                             <li class="mb-3"><i class="bi bi-check-circle text-primary me-2"></i>
                                 <strong>Practicality:</strong> I believe growth should be real and usable in everyday
                                 life — not just theory. Every tool I share is designed to be practical, applicable, and
-                                sustainable beyond the coaching session.</li>
+                                sustainable beyond the coaching session.
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -269,16 +272,16 @@
         <i class="bi bi-arrow-up-short"></i>
     </a>
 
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/php-email-form/validate.js"></script>
+    <script src="/assets/vendor/aos/aos.js"></script>
+    <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
 </body>
 
