--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/'assets/img/logo.png" rel="icon">
+  <link href="/'assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -20,14 +20,14 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/'assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/'assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/'assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/'assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/'assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="/'assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -43,7 +43,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="/" class="active">Home</a></li>
           <li><a href="/about/">About</a></li>
           <li><a href="/services/">Services</a></li>
           <li><a href="/testimonials/">Testimonials</a></li>
@@ -77,7 +77,7 @@
           </div>
           <div class="col-lg-6">
             <div class="hero-image">
-              <img src="assets/img/profile/profile-1.png" alt="Aya Heals Life" class="img-fluid" data-aos="zoom-out"
+              <img src="/assets/img/profile/profile-1.png" alt="Aya Heals Life" class="img-fluid" data-aos="zoom-out"
                 data-aos-delay="300">
               <div class="shape-1"></div>
               <div class="shape-2"></div>
@@ -103,7 +103,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 position-relative" data-aos="fade-right" data-aos-delay="200">
             <div class="about-image">
-              <img src="assets/img/profile/profile-square-2.webp" alt="Aya Profile" class="img-fluid rounded-4">
+              <img src="/assets/img/profile/profile-square-2.webp" alt="Aya Profile" class="img-fluid rounded-4">
             </div>
           </div>
 
@@ -295,7 +295,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="service-item">
-                  <img src="assets/img/services/service-1.png" alt="Youth Coaching" class="service-icon img-fluid mb-3"
+                  <img src="/assets/img/services/service-1.png" alt="Youth Coaching" class="service-icon img-fluid mb-3"
                     loading="lazy">
                   <h3><a href="#">Youth Coaching</a></h3>
                   <p>One-on-one sessions tailored for ages 18–35. Gain clarity, shift habits, and build confidence.</p>
@@ -304,7 +304,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="service-item">
-                  <img src="assets/img/services/service-2.png" alt="Group Coaching" class="service-icon img-fluid mb-3"
+                  <img src="/assets/img/services/service-2.png" alt="Group Coaching" class="service-icon img-fluid mb-3"
                     loading="lazy">
                   <h3><a href="#">Group Coaching</a></h3>
                   <p>Learn together, practice tools, and grow in a supportive circle.</p>
@@ -313,7 +313,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="service-item">
-                  <img src="assets/img/services/service-3.png" alt="Mindfulness for Peace"
+                  <img src="/assets/img/services/service-3.png" alt="Mindfulness for Peace"
                     class="service-icon img-fluid mb-3" loading="lazy">
                   <h3><a href="#">Mindfulness for Peace</a></h3>
                   <p>A four-session program designed to help you manage emotions, reduce stress, and feel balanced.</p>
@@ -322,7 +322,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="service-item">
-                  <img src="assets/img/services/service-4.png" alt="Empowerment Workshops"
+                  <img src="/assets/img/services/service-4.png" alt="Empowerment Workshops"
                     class="service-icon img-fluid mb-3" loading="lazy">
                   <h3><a href="#">Empowerment Workshops</a></h3>
                   <p>Interactive group workshops to build confidence, life skills, and resilience.</p>
@@ -354,7 +354,7 @@
             <div class="col-lg-6 col-md-6 portfolio-item isotope-item">
               <div class="portfolio-card">
                 <div class="portfolio-image">
-                  <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="River Poem" loading="lazy">
+                  <img src="/assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="River Poem" loading="lazy">
                   <div class="portfolio-overlay">
                     <div class="portfolio-actions">
                       <a href="poems.html" class="details-link"><i class="bi bi-book"></i> Read Poem</a>
@@ -372,7 +372,7 @@
             <div class="col-lg-6 col-md-6 portfolio-item isotope-item">
               <div class="portfolio-card">
                 <div class="portfolio-image">
-                  <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="Friday Poem" loading="lazy">
+                  <img src="/assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="Friday Poem" loading="lazy">
                   <div class="portfolio-overlay">
                     <div class="portfolio-actions">
                       <a href="poems.html" class="details-link"><i class="bi bi-book"></i> Read Poem</a>
@@ -429,7 +429,7 @@
                       "Aya’s lighthearted and professional approach made the sessions enjoyable and deeply impactful."
                     </p>
                     <div class="profile d-flex align-items-center">
-                      <img src="assets/img/person/person-f-8.webp" class="profile-img" alt="">
+                      <img src="/assets/img/person/person-f-8.webp" class="profile-img" alt="">
                       <div class="profile-info">
                         <h3>Client</h3>
                         <span>Coaching Session</span>
@@ -450,7 +450,7 @@
                       empowered."
                     </p>
                     <div class="profile d-flex align-items-center">
-                      <img src="assets/img/person/person-m-7.webp" class="profile-img" alt="">
+                      <img src="/assets/img/person/person-m-7.webp" class="profile-img" alt="">
                       <div class="profile-info">
                         <h3>Client</h3>
                         <span>Coaching Session</span>
@@ -536,16 +536,16 @@
     <i class="bi bi-arrow-up-short"></i>
   </a>
 
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/assets/vendor/aos/aos.js"></script>
+  <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <script src="assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 
 </body>
 
