--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/'assets/img/logo.png" rel="icon">
-  <link href="/'assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/logo.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -20,14 +20,14 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/'assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/'assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/'assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/'assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/'assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="/'assets/css/main.css" rel="stylesheet">
+  <link href="/assets/css/main.css" rel="stylesheet">
 
 </head>
 
