--- a/about/index.html
+++ b/about/index.html
@@ -43,11 +43,11 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="poems.html">Poems</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about/" class="active">About</a></li>
+                    <li><a href="/services/">Services</a></li>
+                    <li><a href="/testimonials/">Testimonials</a></li>
+                    <li><a href="/poems/">Poems</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
